tests/NormalTests/paczka1/fuzzy1/56839733.err
Error in line 1: 9mwTj A311 50,7
Error in line 11: S786 A78 94,6
Error in line 10: 9gswhc8WC A78 12,7
Error in line 28: Yp9Y4jQ5p A]8 48,4
Error in line 26: 1QdYpp A78 48,9
Error in line 29: 1QdYpp A311 11,4
Error in line 31: sSL A78 7,2
Error in line 30: Yp9Y4jQ5p S786 2,8
